# oneWeekRayTraceCpp

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  sphere.h  utils.h  vec3.h
include/gui/: mainWindow.h
